Fixed black to transparent gradient support on Safari

--- a/src/components/Poster/poster.scss
+++ b/src/components/Poster/poster.scss
@@ -253,7 +253,7 @@
         width: calc(100% - 6px);
         height: 100%;
         border-radius: 5px;
-        background: linear-gradient(360deg, rgba(0, 0, 0, 0.6) 0%, rgba(255, 255, 255, 0) 65%);
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0.6) 0%, transparent 65%);
         z-index: 0;
         opacity: 0;
         transition: opacity 0.2s ease-out;
